fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ body {
 .home-sci {
     position: absolute;
     bottom: 40px;
-    width: 220px;
+    width: 215px;
     display: flex;
     justify-content: space-between;
 }
